# callback_requests

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
.github/workflows/: test-suite.yaml
src/callbacks/: handle_calls.py
tests/: test_handle_calls.py
